# Hands-On-Game-Animation-Programming

./: .gitignore  CMakeLists.txt
Chapter01/: CMakeLists.txt
Chapter01/Sample00/Code/: Util.h  Util.mm  XMain.cpp  XMain.mm
Chapter06/: CMakeLists.txt
Chapter06/Sample00/Code/: Attribute.cpp  Uniform.cpp  Util.h
Chapter06/Sample01/Code/: Attribute.cpp  Attribute.h  IndexBuffer.cpp  PreDefine.h  Sample.cpp  Shader.h  Uniform.cpp  Uniform.h  Util.mm  XMain.mm
Chapter08/: CMakeLists.txt
Chapter08/Sample01/Code/: Shader.cpp  Track.h  Uniform.h
Chapter09/: CMakeLists.txt
Chapter09/Sample01/Code/: Clip.cpp  Pose.cpp  Pose.h  Sample.cpp  Track.cpp
Chapter10/: CMakeLists.txt
Chapter10/Sample01/Code/: Pose.h  Sample.cpp  Transform.cpp  Util.mm
Chapter10/Sample02/Code/: Attribute.h  Sample.cpp  XMain.mm
Chapter10/Sample02/Shaders/: skinned.vert
Chapter11/: CMakeLists.txt
Chapter11/Sample00/Code/: XMain.mm
Chapter12/: CMakeLists.txt
Chapter12/Sample01/Code/: Draw.cpp  Sample.cpp  Track.cpp  TransformTrack.cpp  Uniform.cpp
Chapter13/: CMakeLists.txt
Chapter13/Sample01/Code/: CCDSolver.cpp  FABRIKSolver.cpp  Sample.cpp  Util.h
Chapter13/Sample02/Code/: Sample.cpp
Chapter13/Sample03/Code/: FABRIKSolver.cpp  GLTFLoader.cpp  Mesh.cpp  Sample.cpp
Chapter14/: CMakeLists.txt
Chapter14/Sample01/Code/: Attribute.cpp  Clip.cpp  Sample.cpp  Uniform.cpp
Chapter15/: CMakeLists.txt
Chapter15/Sample01/Code/: AnimTexture.cpp  Crowd.cpp  PreDefine.h  Sample.cpp  Texture.cpp
